# MachineLearning

MLOps/ds_project/: pyproject.toml
MLOps/sample-ds/: pyproject.toml
Machine Learning A-Z (Codes and Datasets)/Part 1 - Data Preprocessing/Section 2 -------------------- Part 1 - Data Preprocessing --------------------/Python/: data_preprocessing_template.ipynb  data_preprocessing_tools.ipynb
