[tool.poetry]
name = "ds-project"
version = "0.1.0"
description = ""
authors = ["deepak.raghavendra.bhat <deepak.raghavendra.bhat@outlook.com>"]
readme = "README.md"
packages = [{include = "ds_project"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
